--- a/.gitmodules
+++ b/.gitmodules
@@ -12,3 +12,8 @@
 	path = OCA/website
 	url = git@github.com:OCA/website.git
 	branch = 15.0
+
+[submodule "OCA/website0"]
+	path = OCA/website0
+	url = git@github.com:OCA/website.git
+	branch = 15.0
