--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,8 @@
 	path = OCA/website0
 	url = git@github.com:OCA/website.git
 	branch = 15.0
+
+[submodule "OCA/web"]
+	path = OCA/web
+	url = git@github.com:OCA/web.git
+	branch = 15.0
