--- a/.gitmodules
+++ b/.gitmodules
@@ -27,3 +27,8 @@
 	path = OCA/server-ux
 	url = git@github.com:OCA/server-ux.git
 	branch = 15.0
+
+[submodule "OCA/vertical-association"]
+	path = OCA/vertical-association
+	url = git@github.com:OCA/vertical-association.git
+	branch = 15.0
