--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,8 @@
 	path = OCA/server-tools
 	url = git@github.com:OCA/server-tools.git
 	branch = 15.0
+
+[submodule "OCA/server-brand"]
+	path = OCA/server-brand
+	url = git@github.com:OCA/server-brand.git
+	branch = 15.0
