--- a/.gitmodules
+++ b/.gitmodules
@@ -47,3 +47,8 @@
 	path = OCA/server-backend
 	url = git@github.com:OCA/server-backend.git
 	branch = 15.0
+
+[submodule "OCA/server-auth"]
+	path = OCA/server-auth
+	url = git@github.com:OCA/server-auth.git
+	branch = 15.0
