--- a/.gitmodules
+++ b/.gitmodules
@@ -62,3 +62,8 @@
 	path = OCA/rma
 	url = git@github.com:OCA/rma.git
 	branch = 15.0
+
+[submodule "OCA/pms"]
+	path = OCA/pms
+	url = git@github.com:OCA/pms.git
+	branch = 15.0
