[ADD] submodule OCA/knowledge

--- a/.gitmodules
+++ b/.gitmodules
@@ -72,3 +72,8 @@
 	path = OCA/queue
 	url = git@github.com:OCA/queue.git
 	branch = 15.0
+
+[submodule "OCA/knowledge"]
+	path = OCA/knowledge
+	url = git@github.com:OCA/knowledge.git
+	branch = 15.0
