--- a/.gitmodules
+++ b/.gitmodules
@@ -82,3 +82,8 @@
 	path = OCA/edi
 	url = git@github.com:OCA/edi.git
 	branch = 15.0
+
+[submodule "OCA/donation"]
+	path = OCA/donation
+	url = git@github.com:OCA/donation.git
+	branch = 15.0
